<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editingcard.EditingCardActivity">

    <EditText
        android:id="@+id/et_frontcard"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:hint="@string/front" />

    <EditText
        android:id="@+id/et_backcard"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:hint="@string/back"/>

    <Button
        android:id="@+id/b_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="218dp"
        android:layout_marginStart="60dp"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/b_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/b_confirm"
        android:layout_marginEnd="60dp"
        android:text="@string/cancel" />
</RelativeLayout>