<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editingdeck.EditingDeckActivity">

    <EditText
        android:id="@+id/et_name"
        android:hint="@string/deck_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:hint="@string/new_per_lesson"
        android:id="@+id/et_new_per_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/b_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_name"
        android:layout_marginTop="162dp"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/b_cancel_editing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_name"
        android:layout_alignTop="@+id/b_confirm"
        android:text="@string/cancel" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_words"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/b_add_cards"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add_cards" />
</RelativeLayout>